<!--
  Copyright 2012 The Android Open Source Project, powered by Apache

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
		<HorizontalScrollView
		    android:soundEffectsEnabled="true"
		    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:scrollbarFadeDuration="0">
			<LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="2dp"
	            android:orientation="horizontal">
			    
		        <com.appt8.android.apps.funkids.TouchHighlightImageButton
		            android:id="@+id/number1"
		            android:layout_width="319dp"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="1dp"
		            android:layout_marginRight="1dp"
		            android:contentDescription="@string/one"		            
		            android:onClick="ImageClicked"
		            android:scaleType="fitXY"
		            android:src="@drawable/one" />
	
	            <com.appt8.android.apps.funkids.TouchHighlightImageButton
	                android:id="@+id/number2"
	                android:layout_width="320dp"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginLeft="1dp"
	                android:layout_marginRight="1dp"
	                android:src="@drawable/two"
	                android:contentDescription="@string/two" 
	                android:onClick="ImageClicked" />
	           
	            <com.appt8.android.apps.funkids.TouchHighlightImageButton
	                android:id="@+id/number3"
	                android:layout_width="320dp"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginLeft="1dp"
	                android:layout_marginRight="1dp"
	                android:src="@drawable/three"
	                android:contentDescription="@string/three" 
	                android:onClick="ImageClicked" />
	            
	      		<com.appt8.android.apps.funkids.TouchHighlightImageButton
	                android:id="@+id/number4"
	                android:layout_width="320dp"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginLeft="1dp"
	                android:layout_marginRight="1dp"
	                android:src="@drawable/four"
	                android:contentDescription="@string/four"
	                android:onClick="ImageClicked" />
	
	            <com.appt8.android.apps.funkids.TouchHighlightImageButton
	                android:id="@+id/number5"
	                android:layout_width="320dp"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginLeft="1dp"
	                android:layout_marginRight="1dp"
	                android:src="@drawable/five"
	                android:contentDescription="@string/five" 
	                android:onClick="ImageClicked" />
	            
	            <com.appt8.android.apps.funkids.TouchHighlightImageButton
	                android:id="@+id/number6"
	                android:layout_width="320dp"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginLeft="1dp"
	                android:layout_marginRight="1dp"
	                android:src="@drawable/six"
	                android:contentDescription="@string/six" 
	                android:onClick="ImageClicked" />
	           	
	           	<com.appt8.android.apps.funkids.TouchHighlightImageButton
	                android:id="@+id/number7"
	                android:layout_width="320dp"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginLeft="1dp"
	                android:layout_marginRight="1dp"
	                android:src="@drawable/seven"
	                android:contentDescription="@string/seven" 
	                android:onClick="ImageClicked" />
	           	
	           	<com.appt8.android.apps.funkids.TouchHighlightImageButton
	                android:id="@+id/number8"
	                android:layout_width="320dp"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginLeft="1dp"
	                android:layout_marginRight="1dp"
	                android:src="@drawable/eight"
	                android:contentDescription="@string/eight" 
	                android:onClick="ImageClicked" />
	           	
	           	<com.appt8.android.apps.funkids.TouchHighlightImageButton
	                android:id="@+id/number9"
	                android:layout_width="320dp"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginLeft="1dp"
	                android:layout_marginRight="1dp"
	                android:src="@drawable/nine"
	                android:contentDescription="@string/nine" 
	                android:onClick="ImageClicked" />
	           		
	           	<com.appt8.android.apps.funkids.TouchHighlightImageButton
	                android:id="@+id/number10"
	                android:layout_width="320dp"
	                android:layout_height="wrap_content"
	                android:scaleType="fitXY"
	                android:layout_marginLeft="1dp"
	                android:layout_marginRight="1dp"
	                android:src="@drawable/ten"
	                android:contentDescription="@string/ten" 
	                android:onClick="ImageClicked" />
	                                    		        
	             </LinearLayout>
			</HorizontalScrollView>

    <WebView 
		    android:id="@+id/web_content_numbers"
		    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textAppearance="?android:attr/textAppearanceLarge"
    		android:textColor="#FF0000"
            android:scrollbars="vertical"
            android:textSize="16sp"
		    />

</FrameLayout>
