<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rhymesLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:layout_weight="1"
    android:orientation="vertical"
    tools:context="com.appt8.android.apps.funkids.DisplayRhymesActivity" >

     <LinearLayout
         android:id="@+id/LinearLayout2"
         android:layout_width="fill_parent"
         android:layout_height="0dip"
         android:layout_weight="0.05"
         android:orientation="horizontal">
  
	    <TextView
	        android:id="@+id/txtRhymeHead"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:text="Select Rhyme to play"
	        android:textStyle="bold"
	     />
	    <Spinner
	        android:id="@+id/rhymes_spinner"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
   </LinearLayout>

   <LinearLayout 
    android:id="@+id/LinearLayout3"
    android:layout_width="wrap_content"
    android:layout_height="0dip"    
    android:orientation="horizontal" 
    android:layout_weight="0.05"
    android:layout_gravity="center" > 
	
	<TextView
	    android:id="@+id/txtRhymeTitle"
	    style="@dimen/activity_horizontal_margin"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"	    
	    android:layout_gravity="center"
	    android:text="@string/rhyme_baba_title"	    
	    android:textSize="@dimen/abc_action_bar_title_text_size"
	    android:textStyle="bold" />
	</LinearLayout>

	 <LinearLayout 
		android:id="@+id/LinearLayout4"
		android:layout_width="wrap_content"
		android:layout_height="0dip"
		android:orientation="vertical"
		android:layout_weight="0.4"
		android:layout_gravity="center" >

	     <TextView
	         android:id="@+id/txtRhymeContent"
	         
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         
	         android:scrollbars="vertical"
	         android:text="@string/rhyme_baba"
	         android:textSize="18sp" />

	</LinearLayout>
	<LinearLayout 
		android:id="@+id/LinearLayout5"
		android:layout_width="wrap_content"
		android:layout_height="0dip"
		android:orientation="horizontal" 
		android:layout_weight="0.075"
		android:layout_gravity="center"
		android:paddingTop="20dp">
		<TextView
			android:id="@+id/txtInitialTime"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
			android:text="@string/initial_Time"
			android:textAppearance="?android:attr/textAppearanceSmall" />
		<SeekBar
			android:id="@+id/seekBar1" 
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
			 />
   		<TextView
			android:id="@+id/txtTotalTime"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
			android:text="@string/initial_Time"
			android:textAppearance="?android:attr/textAppearanceSmall" />
   	</LinearLayout>
   	
	<LinearLayout 
		android:id="@+id/LinearLayout6"
		android:layout_width="wrap_content"
		android:layout_height="0dip"
		android:orientation="horizontal" 
		android:layout_weight="0.1" 
		android:layout_gravity="center">

		<ImageButton
			android:id="@+id/imagePause"
			style="@dimen/activity_horizontal_margin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/rhyme_index"
			android:onClick="pause"
			android:src="@android:drawable/ic_media_pause" />
		<ImageButton
			android:id="@+id/imagePlay"
			style="@dimen/activity_horizontal_margin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="play"
			android:src="@android:drawable/ic_media_play"
			android:text="@string/rhyme_index" />
		   
	</LinearLayout>
</LinearLayout>