<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:scrollbarFadeDuration="0"
        android:soundEffectsEnabled="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal" >

            <com.appt8.android.apps.funkids.TouchHighlightImageButton
                android:id="@+id/thumb_a"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_marginRight="1dp"
                android:contentDescription="@string/a"
                android:scaleType="centerCrop"
                android:src="@drawable/thumb_a" />

            <com.appt8.android.apps.funkids.TouchHighlightImageButton
                android:id="@+id/thumb_b"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:contentDescription="@string/b"
                android:scaleType="centerCrop"
                android:src="@drawable/b" />

            <!--
             <com.appt8.android.apps.funkids.TouchHighlightImageButton
	             android:id="@+id/thumb_surprise"
	             android:layout_width="100dp"
	             android:layout_height="75dp"
	             android:src="@drawable/thumb_surprise"
	             android:scaleType="centerCrop"
	             android:contentDescription="@string/surprise_pic" />
	         <com.appt8.android.apps.funkids.TouchHighlightImageButton
	             android:id="@+id/thumb_kids1"
	             android:layout_width="100dp"
	             android:layout_height="75dp"
	             android:layout_marginRight="1dp"
	             android:src="@drawable/thumb_kids"
	             android:scaleType="centerCrop"
	             android:contentDescription="@string/our_kids" />
	
	         <com.appt8.android.apps.funkids.TouchHighlightImageButton
	             android:id="@+id/thumb_us1"
	             android:layout_width="100dp"
	             android:layout_height="75dp"
	             android:src="@drawable/thumb_us"
	             android:scaleType="centerCrop"
	             android:contentDescription="@string/husbend_wife" />
	         
	         <com.appt8.android.apps.funkids.TouchHighlightImageButton
	             android:id="@+id/thumb_surprise1"
	             android:layout_width="100dp"
	             android:layout_height="75dp"
	             android:src="@drawable/thumb_surprise"
	             android:scaleType="centerCrop"
	             android:contentDescription="@string/surprise_pic" />
            -->
        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/description_zoom_touch_close" 
        android:visibility="invisible" />
    <!--
          <TextView
         android:id="@+id/expanded_description"
         android:layout_width="match_parent"
         android:layout_height="match_parent" 
         android:visibility="invisible" />
    -->

</LinearLayout>